--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>React App</title>
   </head>
-  <body>
+  <body style='background-image: url(../assets/Watchtower.png);'>
     <main id="root"></main>
   </body>
 </html>
